--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DemoActivity">
 
     <!--
     slideranimation duration is to set duration for transition between two slides
@@ -18,9 +17,10 @@
     slider indicator selected color is use to specify selected color
     and slider indicator unselected color is use to specify the color when the slider is unselected
     slider scroll time in sec is used to specify scrolling time in seconds
-    -->
+     -->
+
     <com.smarteist.autoimageslider.SliderView
-        android:id="@+id/slider"
+        android:id="@+id/slider1"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
@@ -36,5 +36,6 @@
         app:sliderIndicatorSelectedColor="#5A5A5A"
         app:sliderIndicatorUnselectedColor="#FFF"
         app:sliderScrollTimeInSec="1" />
+
 
 </RelativeLayout>
