--- a/app/src/main/res/navigation/ovs_nav.xml
+++ b/app/src/main/res/navigation/ovs_nav.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ovs_nav">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ovs_nav"
+    app:startDestination="@id/shopFragment">
 
+    <fragment
+        android:id="@+id/exploreFragment"
+        android:name="com.example.ovsystem.ExploreFragment"
+        android:label="fragment_explore"
+        tools:layout="@layout/fragment_explore" />
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="com.example.ovsystem.CartFragment"
+        android:label="fragment_cart"
+        tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/favouriteFragment"
+        android:name="com.example.ovsystem.FavouriteFragment"
+        android:label="fragment_favourite"
+        tools:layout="@layout/fragment_favourite" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.ovsystem.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/shopFragment"
+        android:name="com.example.ovsystem.ShopFragment"
+        android:label="fragment_shop"
+        tools:layout="@layout/fragment_shop" />
 </navigation>
