--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.actvity.MainActivity">
 
     <com.smarteist.autoimageslider.SliderView
         android:id="@+id/image_slider"
@@ -22,7 +22,7 @@
         app:sliderIndicatorSelectedColor="#5A5A5A"
         app:sliderIndicatorUnselectedColor="#FFF"
         app:sliderScrollTimeInSec="2"
-        app:sliderStartAutoCycle="true"/>
+        app:sliderStartAutoCycle="true" />
 
     <TextView
         android:layout_width="wrap_content"
