--- a/app/src/main/res/layout/bnv_activity.xml
+++ b/app/src/main/res/layout/bnv_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BNVActivity">
+    tools:context=".ui.actvity.BNVActivity">
 
     <fragment
         android:id="@+id/my_nav_host_fragment"
