--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -117,8 +117,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                </LinearLayout>
 
-                <include layout="@layout/cart_layout" />
             </HorizontalScrollView>
 
             <TextView
@@ -136,8 +145,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                    <include layout="@layout/cart_layout" />
+                </LinearLayout>
 
-                <include layout="@layout/cart_layout" />
             </HorizontalScrollView>
         </LinearLayout>
 
