--- a/app/src/main/res/navigation/ovs_nav.xml
+++ b/app/src/main/res/navigation/ovs_nav.xml
@@ -7,27 +7,27 @@
 
     <fragment
         android:id="@+id/exploreFragment"
-        android:name="com.example.ovsystem.ExploreFragment"
+        android:name="com.example.ovsystem.ui.fragment.ExploreFragment"
         android:label="fragment_explore"
         tools:layout="@layout/fragment_explore" />
     <fragment
         android:id="@+id/cartFragment"
-        android:name="com.example.ovsystem.CartFragment"
+        android:name="com.example.ovsystem.ui.fragment.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
     <fragment
         android:id="@+id/favouriteFragment"
-        android:name="com.example.ovsystem.FavouriteFragment"
+        android:name="com.example.ovsystem.ui.fragment.FavouriteFragment"
         android:label="fragment_favourite"
         tools:layout="@layout/fragment_favourite" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.example.ovsystem.AccountFragment"
+        android:name="com.example.ovsystem.ui.fragment.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
         android:id="@+id/shopFragment"
-        android:name="com.example.ovsystem.ShopFragment"
+        android:name="com.example.ovsystem.ui.fragment.ShopFragment"
         android:label="fragment_shop"
         tools:layout="@layout/fragment_shop" />
 </navigation>
